--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "react-electron",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
+  "main": "public/electron.js",
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "electron-is-dev": "^1.1.0",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cp -a ./api/. ./public/api && react-scripts start",
+    "build": "cp -a ./api/. ./public/api && react-scripts build",
     "test": "react-scripts test",
+    "ele-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "ele-build": "npm run build && electron-builder",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
+    "electron": "^7.0.0",
+    "electron-builder": "^22.1.0",
+    "wait-on": "^3.3.0"
   }
 }
